<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Toolbar_label">YOUR DASHBOARD</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="preference_notification_category">Notification Preferences</string>
    <string name="checkbox_vibrate">Vibrate</string>
    <string name="checkbox_sound">Sound</string>
    <string name="checkbox_LED">LED</string>
    <string name="checkbox_ongoing">Persistent</string>
    <string name="ongoing_detail">Prevent notification from being swiped away</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_detail">Add a snooze action to the notification</string>
    <string name="snooze_length">Snooze length</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_detail">Add a \"Mark as done\" action to the notification</string>
    <string name="nagging_reminder">Nagging reminder</string>
    <string name="nagging_detail">Continuously notify you of the current notification until it is dismissed</string>
    <string name="nagging_interval">Nagging interval</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_about">About</string>
    <string name="action_show_now">Show now</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="action_share">Share</string>
    <string name="delete_confirmation">Are you sure you want to delete this notification?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="save_menu">Save</string>
    <string name="time_now">Now</string>
    <string name="date_today">Today</string>
    <string name="times_shown">Shown %1$d out of %2$d times</string>
    <string name="times_shown_edit">Shown %1$d out of</string>
    <string name="forever">Forever</string>
    <string name="no_repeat">Does not repeat</string>
    <string name="times">times</string>
    <string name="repeat_notification">Number of times to repeat: </string>
    <string name="content_hint">Add notification content</string>
    <string name="select_icon">Select an icon</string>
    <string name="default_icon">Default icon</string>
    <string name="custom_icon">Custom icon</string>
    <string name="select_colour">Select a colour</string>
    <string name="default_colour">Default colour</string>
    <string name="repeats_on">Repeats on:</string>
    <string name="repeat_every">Repeat every</string>
    <string name="repeats_every">Repeats every: %1$d %2$s</string>
    <string name="no_active">No active notifications</string>
    <string name="no_inactive">No inactive notifications</string>
    <string name="toast_past_date">Cannot set initial date in the past</string>
    <string name="toast_higher_number">Repeat number must be higher</string>
    <string name="toast_title_empty">Title cannot be empty</string>
    <string name="toast_mark_as_done">Marked next reminder as done</string>
    <string name="add_reminder">Add reminder</string>
    <string name="libraries">Libraries</string>
    <string name="rate_app">Rate app</string>
    <string name="contact">Contact</string>
    <string name="version">Version</string>
    <string name="thanks_to">Thanks to</string>
    <string name="translator">Translator</string>
    <string name="send_email">Send email</string>
    <string-array name="repeat_array">
        <item>Does not repeat</item>
        <item>Every hour</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>
        <item>Specific days of the week</item>
        <item>Advanced</item>
    </string-array>

    <string name="app_thanks_note">Thanks for download the app</string>
    <string name="app_intro">App Introduction</string>


    <string name="image_desc">Logo image for Easy Bmi calculator</string>
    <string name="slide_one_title">Easy</string>
    <string name="slide_one_subhead">BMI Calculator</string>
    <string name="start_text">Start Calculate</string>
    <string name="start_text2">Your BMI</string>

    <string name="app_title">Easy Calculator</string>

    <string name="enter_age">AGE</string>
    <string name="enter_gender">Choose Sex</string>
    <string name="enter_weight">WEIGHT</string>
    <string name="enter_height">HEIGHT</string>
    <string name="enter_inch">Inch</string>
    <string name="final_bmi_text">Your calculated</string>
    <string name="final_bmi_text2">BMI result is</string>

    <string name="tab_image">Tab Image</string>
    <string name="age">Your Age </string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="calculate">Calculate</string>
    <string name="weight">Weight </string>
    <string name="height">Height </string>

    <string name="kg">Cm</string>
    <string name="lb">Ft</string>


    <string name="ft_in">Ft+In</string>
    <string name="cm">Cm</string>
    <string name="ft">Ft</string>
    <string name="inch">Inch</string>

    <string name="listAge">Age</string>
    <string name="listresult">Result</string>


    <string name="age_policy_error">Please input age to continue.</string>
    <string name="gender_policy_error">Please choose gender to continue.</string>
    <string name="weight_policy_error">Please input weight to continue.</string>
    <string name="height_policy_error">Please input height to continue.</string>

    <string name="title_activity_main">Welcome to health monitor</string>
    <string name="roboto_light">Roboto Light</string>

    <string name="details">Your Details </string>
    <string name="result_details">BMI Result</string>
    <string name="expression_desc">Expression Image for your BMI</string>

    <string name="cancel_btn">Cancel</string>
    <string name="calculate_btn">Calculate</string>
    <string name="about_text">Build By : 0effortthemes</string>
    <string name="build_version">Build Version: 1.0</string>
    <string name="email">support@0effortthemes.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tts_no_engines">There were no Text to Speech Engines located in the device</string>

    <string name="weight_metric">Weight in kg</string>
    <string name="height_metric">Height in m</string>
    <string name="weight_imperial">Weight in pounds</string>
    <string name="height_imperial">Height in inch</string>
    <string name="more_information">More information on Wikipedia</string>
    <string name="wikipedia_bmi_link">https://en.wikipedia.org/wiki/Body_mass_index</string>
    <string name="bmi_result">BMI: %s</string>
    <string name="bmi_cat_1">Very severely underweight</string>
    <string name="bmi_cat_2">Severely underweight</string>
    <string name="bmi_cat_3">Underweight</string>
    <string name="bmi_cat_4">Normal (healthy weight)</string>
    <string name="bmi_cat_5">Overweight</string>
    <string name="bmi_cat_6">Obese Class I (Moderately obese)</string>
    <string name="bmi_cat_7">Obese Class II (Severely obese)</string>
    <string name="bmi_cat_8">Obese Class III (Very severely obese)</string>
    <string name="bmi_cat_9">Obese Class IV (Morbidly Obese)</string>
    <string name="bmi_cat_10">Obese Class V (Super Obese)</string>
    <string name="bmi_cat_11">Obese Class VI (Hyper Obese)</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="default_unit">@string/metric</string>


    <string name="author">Author</string>
    <string name="help_translating_this_app">Help translating this app!</string>
    <string name="rate_in_play_store">Rate in Play Store</string>
    <string name="share_with_friends">Share with your friends</string>
    <string name="check_out">Hey, check out this app: %s\n%s</string>
    <string name="legal">Legal</string>
    <string name="license">License</string>
    <string name="privacy_policy">Privacy policy</string>

    <string name="privacy_policy_content"><![CDATA[
    1. If you install this app via Google Play, Google will collect information about your device
    and show me them in the Google Play console. In case of a crash some information will be
    uploaded to Google. I have no control over this. Please refer to their privacy policy for details.\n
    2. If you install this app via F-Droid, I cannot see any usage data. Please refer to their privacy policy for details.\n
    3. If running a device with Auto Backup by Google, Google will upload your system of units to Google Drive: https://developer.android.com/guide/topics/data/autobackup\n
    4. You can mail me at characterdog.apps@gmail.com. In this case I and Google will know your
    e-mail address and everything your write in your mail. I will delete your mail after your issue
    has been solved or your question has been answered. Google may have a backup of the mail and not
    delete it when I do so.\n
    5. If you click a link on the About screen the websites\' operator may collect information about
    your device.\n
    6. I will not share the information with anybody else.
    ]]></string>

</resources>