<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_87">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:padding="10dp">

                <TextView
                    android:text="@string/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_text"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:background="@drawable/text_style"
                    android:layout_marginBottom="1dp"/>

                <RelativeLayout
                    android:id="@+id/container_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_style"
                    android:padding="10dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/layout_left"
                        android:layout_marginStart="110dp"
                        android:layout_marginTop="10dp">

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/layout_right"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="90dp"
                        android:layout_alignTop="@+id/layout_left">

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editAgeLayout"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"

                        android:layout_marginTop="10dp"
                        android:layout_alignTop="@+id/layout_left"
                        android:layout_alignStart="@+id/editHeightLayout"
                        android:layout_alignEnd="@+id/layout_left">


                        <EditText
                            android:id="@+id/editAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:hint="@string/age"

                            android:textSize="16sp"
                            android:layout_below="@+id/editAgeLayout"
                            android:layout_alignParentStart="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editWidthLayout"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"

                        android:layout_alignTop="@+id/editAgeLayout"
                        android:layout_alignEnd="@+id/layout_right"
                        android:layout_alignStart="@+id/layout_left">


                        <EditText
                            android:id="@+id/editWidth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:hint="@string/weight"

                            android:textSize="16sp"
                            android:layout_below="@+id/editWidthLayout"
                            android:layout_alignParentStart="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/editWeight_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:entries="@array/weightArray"
                        android:layout_alignBottom="@+id/editWidthLayout"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/editWidthLayout" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editHeightLayout"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_alignBottom="@+id/editHeight_unit"
                        android:layout_toStartOf="@+id/editWidthLayout"
                        android:layout_alignParentStart="true">


                        <EditText
                            android:id="@+id/editHeight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:hint="@string/height"
                            android:textSize="16sp"
                            android:layout_below="@+id/editWidthLayout"
                            android:layout_alignParentStart="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editHeightInchLayout"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_above="@+id/ediRadioGender"
                        android:layout_alignEnd="@+id/layout_right"
                        android:layout_toEndOf="@+id/editHeightLayout">


                        <EditText
                            android:id="@+id/editHeightInch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:hint="@string/inch"
                            android:textSize="16sp"
                            android:layout_below="@+id/editWidthLayout"
                            android:layout_alignParentStart="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/editHeight_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:entries="@array/heightArray"
                        android:layout_below="@+id/editWeight_unit"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/editHeightLayout"
                        android:layout_alignStart="@+id/layout_right"
                        android:layout_marginTop="30dp" />

                    <RadioGroup
                        android:id="@+id/ediRadioGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:minHeight="43dp"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:layout_below="@+id/editHeightLayout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp">

                        <RadioButton
                            android:id="@+id/editRadioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:button="@drawable/radio_male_inner"
                            android:paddingRight="5dp"
                            android:paddingLeft="5dp"/>

                        <RadioButton
                            android:id="@+id/editRadioFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/radio_female_inner"/>

                    </RadioGroup>

                    <Button
                        android:id="@+id/editCancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel_btn"
                        android:layout_gravity="start"
                        android:layout_marginTop="20dp"
                        android:layout_below="@+id/ediRadioGender"
                        android:layout_alignParentStart="true"
                        android:layout_alignEnd="@+id/layout_left"
                        android:textColor="@color/white"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="@drawable/btn_cancel"
                        android:layout_marginEnd="10dp" />


                    <Button
                        android:id="@+id/editCalculate"
                        android:text="@string/calculate_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_alignBaseline="@+id/editCancel"
                        android:layout_alignBottom="@+id/editCancel"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/editCancel"
                        android:textColor="@color/white"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="@drawable/btn_calculate" />

                </RelativeLayout>

            <TextView
                android:text="@string/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/about_txt"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:background="@drawable/text_style"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"/>

            <LinearLayout
                android:id="@+id/container_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/card_style"
                android:padding="10dp"
                android:layout_marginBottom="60dp">

                <TextView
                    android:text="@string/about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_text1" />

                <TextView
                    android:text="@string/build_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_text2" />

                <TextView
                    android:id="@+id/about_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
