<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/two_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/back_selector"
    android:orientation="vertical"
    tools:context="com.worthcare.BmiTwoFragment">

    <ImageView
        android:id="@+id/logo2img"
        android:layout_width="@dimen/img_dimen_sm"
        android:layout_height="@dimen/img_dimen_sm"
        android:src="@drawable/ic_bmi_icon"
        android:contentDescription="@string/image_desc"
        android:layout_marginTop="40dp"
        android:layout_gravity="center" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:inputType="number"
            android:hint="@string/enter_age"
            android:textColorHint="@color/white_54"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="normal"
            android:drawableEnd="@drawable/ic_edit"
            android:gravity="center"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingEnd="5dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_gender"
        android:textColor="@color/white_54"
        android:textAllCaps="true"
        android:fontFamily="monospace"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:padding="10dp" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="100dp"
        android:gravity="center"
        android:divider="@drawable/ic_devider_line"
        android:showDividers="middle">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_female" />

    </RadioGroup>


</LinearLayout>
