<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiMainActivity"
    android:background="@color/colorPrimaryDark"
    tools:layout_editor_absoluteY="81dp">
    <ImageView
        android:id="@+id/ic_bmi_calculator"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:src="@drawable/health_vector_bmi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate your BMI"
        android:fontFamily="@font/montserrat_semibold"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_height_outer"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:background="@drawable/shape_semi_rounded"
                android:layout_below="@+id/txt_result_cat"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                >

                <AutoCompleteTextView
                    android:id="@+id/txt_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789.,"
                    android:ems="10"
                    android:hint="@string/height_metric"
                    android:paddingLeft="20dp"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_weight_outer"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:background="@drawable/shape_semi_rounded"
                android:layout_below="@+id/txt_height_outer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp">

                <AutoCompleteTextView
                    android:id="@+id/txt_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/weight_metric"
                    android:paddingLeft="20dp"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_result_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/btn_blue"
                android:layout_below="@+id/ic_bmi_calculator"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-40dp"
                tools:text="BMI: 20" />

            <TextView
                android:id="@+id/txt_result_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_result_bmi"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                tools:text="Normal (healthy weight) " />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_more_info"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radiogroup1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_semi_rounded"
                android:text="@string/more_information"
                app:backgroundTint="@color/colorWhite"
                />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radiogroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_weight_outer"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <RadioButton
                    android:id="@+id/btn_metric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metric"
                    android:textColor="@color/colorWhite"
                    android:onClick="setSystemOfUnits"
                    android:buttonTint="@color/colorWhite"
                     />

                <RadioButton
                    android:id="@+id/btn_imperial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/imperial"
                    android:textColor="@color/colorWhite"
                    android:onClick="setSystemOfUnits"
                    android:buttonTint="@color/colorWhite" />
            </RadioGroup>
</RelativeLayout>